# code

./: .gitignore  CMakeLists.txt  README.md  components.cpp  components.h  computer.cpp  computer.h  lua_bridge.cpp  lua_utf8.c  main.cpp  unidata.h
sample_project/components/eeprom-openloader.eeprom/: address.txt
sample_project/components/floppy-openos.filesystem/: address.txt  label.txt
sample_project/components/gpu-tier3.gpu/: address.txt  config.txt
sample_project/components/hdd-temp.filesystem/: address.txt  label.txt
sample_project/components/keyboard.keyboard/: address.txt
sample_project/components/screen-tier3.screen/: address.txt  config.txt
sample_project/computers/computer/: address.txt  components.txt  tempfs.txt
